recover password firebase

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="error" id="password-invalid-error">Senha Obrigatória</div>
         <div>
-            <button type="button" class="recsenha" id="recover-password-button" disabled>Recuperar Senha</button>
+            <button type="button" class="recsenha" id="recover-password-button" disabled onclick="recoverPassword()">Recuperar Senha</button>
             </div>
 
         <div>
