--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -4,14 +4,33 @@
 
 <head>
     <title>Register - Controle de Gastos</title>
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/css/global.css">
+    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="/static/css/global.css">
     <script src="static/js/script.js"></script>
     <script src="static/js/validations.js"></script>
 </head>
 
-<body>
-    Register
+<body class="centralize">
+    <form>
+    <div class="form-field">
+        <div><label>Email</label></div>
+        <input type="email" id="email" name="email" placeholder="email@gmail.com"></input>
+    </div>
+    <div class="form-field">
+        <div><label>Senha</label></div>
+        <input type="password" id="senha" name="senha" placeholder="Senha"></input>
+    </div>
+    <div class="form-field">
+        <div><label>Confirmar Senha</label></div>
+        <input type="password" placeholder="Confirme sua senha"></input>
+    </div>
+    <div>
+    <button type="button" class="login">Registrar</button>
+    </div>
+    <div>
+        <button type="button" class="register">Login</button>
+        </div>
+    </form>
 </body>
 
 </html>
