--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -6,26 +6,31 @@
     <title>Register - Controle de Gastos</title>
     <link rel="stylesheet" href="register.css">
     <link rel="stylesheet" href="/static/css/global.css">
-    <script src="static/js/script.js"></script>
-    <script src="static/js/validations.js"></script>
+    <script src="register.js"></script>
+    <script src="/static/js/validations.js"></script>
 </head>
 
 <body class="centralize">
     <form>
     <div class="form-field">
         <div><label>Email</label></div>
-        <input type="email" id="email" name="email" placeholder="email@gmail.com"></input>
+        <input type="email" id="email" name="email" placeholder="email@gmail.com" onchange="onChangeEmail()"></input>
+        <div class="error" id="email-invalid-error">Email Invalido</div>
+        <div class="error" id="email-required-error">Email é obrigatório</div>
     </div>
     <div class="form-field">
         <div><label>Senha</label></div>
-        <input type="password" id="senha" name="senha" placeholder="Senha"></input>
+        <input type="password" id="password" placeholder="Senha" onchange="onChangePassword()"></input>
+        <div class="error" id="password-required-error">Senha é obrigatória</div>
+        <div class="error" id="password-min-length-error">Senha deve ter 6 caracteres</div>
     </div>
     <div class="form-field">
         <div><label>Confirmar Senha</label></div>
-        <input type="password" placeholder="Confirme sua senha"></input>
+        <input type="password" id="confirmPassword" placeholder="Confirme sua senha" onchange="onConfirmPassword()"></input>
+        <div class="error" id="password-not-match">Senhas não coincidem</div>
     </div>
     <div>
-    <button type="button" class="login">Registrar</button>
+    <button type="button" class="login" id="register">Registrar</button>
     </div>
     <div>
         <button type="button" class="register">Login</button>
